[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_reader"
authors = [{ name = "Antonio Rodrigues", email = "axtonio.code@gmail.com" }]
description = "Library to work with markdown"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
	"PyYAML",
	"pdfkit",
	"pypandoc",
	"python-frontmatter",
	"terminal_app @ git+https://github.com/axtonio/terminal_app.git@v1.0.3",
]

[tool.setuptools.dynamic]
version = { attr = "markdown_reader.__version__" }

[project.urls]
GitHub = "https://github.com/axtonio/markdown_reader"

[tool.setuptools]
package-data = { "markdown_reader" = ["**/*.css"] }
